# neunet

./: CMakeLists.txt
models/: XOR.model
src/: main.cpp
src/dataset/: dataset.h
src/matrix/: matrix.h
src/neural_net/: actfunc.h  errors.h  layers.h  nnet.h
